lib: Implement GetMessagesCommand

--- a/crates/libjoinc/Cargo.toml
+++ b/crates/libjoinc/Cargo.toml
@@ -10,3 +10,4 @@ readme = "README.md"
 libjoincserde = { version = "0.1.0", path = "../libjoincserde" }
 md5 = "0.7.0"
 serde = { version = "1.0.188", features = ["derive"] }
+serde_repr = "0.1.16"
