--- a/crates/joinccmd/Cargo.toml
+++ b/crates/joinccmd/Cargo.toml
@@ -7,5 +7,6 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 
 [dependencies]
+chrono = "0.4.31"
 clap = { version = "4.3.12", features = ["derive"] }
 libjoinc = { path = "../libjoinc" }
